# matools

./: .gitignore  DESCRIPTION  NAMESPACE  README.md  pyproject.toml  requirements.txt
R/: karyotyping_utils.R
man/: alignment2gw.Rd  gr.breaks.ordered.Rd  pad.walk.Rd  read2node.Rd  rminv.walk.Rd
matools/: __init__.py  cohort.py  io.py  utils.py  variants.py
tests/: test_cohort.py  test_io.py  test_utils.py  test_variants.py
