[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matools"
version = "0.1.0"
description = "Cancer genomics helper functions and analysis utilities"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["cancer genomics", "bioinformatics", "MAF", "VCF", "somatic mutations"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["matools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
